--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,82 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+margin: 0;
+box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:100vh;
+  background-color: black;
 }
+
+.side-bar-container {
+  width:5%;
+}
+
+.question-container {
+  display: flex;
+  flex-direction: column;
+  font-size: 50px;
+  width:60%;
+  border:1px solid;
+  padding:30px;
+  background-color: white;
+  border-radius:10px;
+  
+}
+
+.options{
+  width:40%;
+  border:1px solid;
+  border-radius: 5px;
+  margin: 10px 0;
+  padding: 5px;
+  background-color: rgb(14, 186, 229);
+  color: white;
+ 
+}
+
+.options:hover{
+  background-color: rgb(126, 215, 237);;
+}
+
+
+.options-container{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 5px;
+  font-size: 40px;
+  justify-content: space-between;
+}
+
+.question{
+  border:1px solid;
+  border-radius: 5px;
+  padding: 0 10px ;
+  background-color: rgb(14, 186, 229);
+  color: white;
+  
+}
+
+.correct-option{
+  width:40%;
+  border:1px solid;
+  border-radius: 5px;
+  margin: 10px 0;
+  padding: 5px;
+  background-color: green;
+  color: white;
+}
+
+.wrong-option{
+  width:40%;
+  border:1px solid;
+  border-radius: 5px;
+  margin: 10px 0;
+  padding: 5px;
+  background-color: red;
+  color: white;
+}
+
