--- a/src/index.css
+++ b/src/index.css
@@ -36,19 +36,18 @@ box-sizing: border-box;
   padding: 5px;
   background-color: rgb(14, 186, 229);
   color: white;
- font-size: 30px;
 }
 
-.options:hover{
+/* .options:hover{
   background-color: rgb(126, 215, 237);;
-}
+} */
 
 
 .options-container{
   display: flex;
   flex-wrap: wrap;
   margin: 5px;
-  font-size: 40px;
+  font-size: 30px;
   justify-content: space-between;
 }
 
@@ -70,7 +69,6 @@ box-sizing: border-box;
   background-color: green;
   color: white;
   height:50px;
-  font-size: 30px;
 }
 
 .wrong-option{
@@ -82,6 +80,24 @@ box-sizing: border-box;
   background-color: red;
   color: white;
   height:50px;
+}
+
+.options-container > button {
   font-size: 30px;
+}
+
+@media(max-width:768px) {
+  .question-container {
+    width:100%;
+    font-size: 20px;
+  }
+
+  .options-container > button {
+    font-size: 12px;
+  }
+
+  .question {
+    padding: 10px;
+  }
 }
 
